--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ PROJECT( Cubiks VERSION 1.0.0 )
 
 # Configuration CMake Module Path
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
+SET( CMAKE_POLICY_DEFAULT_CMP0077 NEW )
 SET_PROPERTY( GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1 )
 
 # Choose default build type (if none specified)
