--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -26,7 +26,7 @@ jobs:
         working-directory: ${{runner.workspace}}
         run: |
           cd Cubiks/build
-          cmake --build . --config "Release"
+          cmake --build . --config "Release" --parallel 4
 
       - name: Deploy documentation
         uses: peaceiris/actions-gh-pages@v3
