--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build library & tests
         working-directory: ${{runner.workspace}}/build
-        run: cmake --build . --config "${{matrix.configs}}"
+        run: cmake --build . --config "${{matrix.configs}}" --parallel 4
 
       - name: Run tests
         working-directory: ${{runner.workspace}}/build
