fix: added GLM find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,8 @@ INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}/submodules/SFML/include" )
 ADD_SUBDIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/submodules/glm" )
 INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_SOURCE_DIR}/submodules/glm" )
 
+FIND_PACKAGE( glm REQUIRED )
+
 # Configuring glbinding
 SET( OPTION_BUILD_EXAMPLES OFF )
 SET( OPTION_BUILD_OWN_KHR_HEADERS ON )
