--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install dependencies
+        run: brew install glm
+
       - name: Configure build
         working-directory: ${{runner.workspace}}
         env:
