--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -21,6 +21,18 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install dependencies
+        working-directory: ${{runner.workspace}}
+        run: |
+          sudo apt-get -y install libxrandr-dev
+          sudo apt-get -y install libgl1-mesa-dev
+          sudo apt-get -y install libudev-dev
+          cd Cubiks/submodules/glm
+          cmake -Bbuild -DCMAKE_BUILD_TYPE=Release
+          cd build
+          cmake --build . --config "Release" --parallel 4
+          cmake --build . --target install --config "Release"
+
       - name: Configure build
         working-directory: ${{runner.workspace}}
         env:
