feat: updated CMake configuration

--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -42,7 +42,11 @@ jobs:
         run: |
           cmake -Bbuild -H$GITHUB_WORKSPACE \
                 -DCMAKE_BUILD_TYPE=${{matrix.configs}} \
-                -DCUBIKS_TESTS=ON
+                -DCUBIKS_TESTS=ON \
+                -DCUBIKS_BUNDLE=ON
+          ls -al
+          ls -al build
+          ls -al build/Cubiks_*
 
       - name: Build library & tests
         working-directory: ${{runner.workspace}}/build
