--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -38,7 +38,8 @@ jobs:
         run: |
           cmake -Bbuild -H$GITHUB_WORKSPACE \
                 -DCMAKE_BUILD_TYPE=${{matrix.configs}} \
-                -DCUBIKS_TESTS=ON
+                -DCUBIKS_TESTS=ON \
+                -DCUBIKS_BUNDLE=ON
 
       - name: Build library & tests
         working-directory: ${{runner.workspace}}/build
