--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ CMAKE_MINIMUM_REQUIRED( VERSION 3.0.0 )
 PROJECT( Cubiks VERSION 1.0.0 )
 
 OPTION( CUBIKS_APP           "Build ${PROJECT_NAME} application" ON )
-OPTION( CUBIKS_TESTS         "Build ${PROJECT_NAME} test suite" OFF )
+OPTION( CUBIKS_BUNDLE        "Build ${PROJECT_NAME} release bundle" OFF )
 OPTION( CUBIKS_DOCUMENTATION "Build ${PROJECT_NAME} documentation" OFF )
+OPTION( CUBIKS_TESTS         "Build ${PROJECT_NAME} test suite" OFF )
 
 # Configuration CMake Module Path
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
@@ -79,13 +80,34 @@ IF( CUBIKS_APP )
 	# Adding application
 	ADD_EXECUTABLE( ${PROJECT_NAME} ${CUBIKS_FILES} ${CUBIKS_APPLICATION} )
 
-	# add_library(glm::glm ALIAS_GLOBAL glm)
-
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC sfml-system )
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC sfml-window )
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC glbinding::glbinding )
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC glbinding::glbinding-aux )
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC globjects::globjects )
+	
+	FILE( COPY "${CMAKE_CURRENT_SOURCE_DIR}/assets" DESTINATION "${CMAKE_BINARY_DIR}" )
+	FILE( COPY "${CMAKE_CURRENT_SOURCE_DIR}/shaders" DESTINATION "${CMAKE_BINARY_DIR}" )
+
+	FILE( GLOB_RECURSE LIBRARIES "${CMAKE_BINARY_DIR}/submodules/**/*.dll" "${CMAKE_BINARY_DIR}/submodules/**/*.so" "${CMAKE_BINARY_DIR}/submodules/**/*.dylib" )
+
+	ADD_CUSTOM_COMMAND(
+		TARGET ${PROJECT_NAME} POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARIES} "${CMAKE_BINARY_DIR}"
+		COMMENT "Moving libraries to binary directory"
+	)
+
+	IF( CUBIKS_BUNDLE )
+		ADD_CUSTOM_COMMAND(
+			TARGET ${PROJECT_NAME} POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/"
+			COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARIES} "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/"
+			COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${PROJECT_NAME}> "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/"
+			COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/assets/" "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/assets/"
+			COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/shaders/" "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/shaders/"
+			COMMENT "Creating ${PROJECT_NAME} bundle"
+		)
+	ENDIF()
 ENDIF()
 
 IF( CUBIKS_TESTS )
