--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,16 @@ CMAKE_MINIMUM_REQUIRED( VERSION 3.0.0 )
 PROJECT( Cubiks VERSION 1.0.0 )
 
 OPTION( CUBIKS_APP           "Build ${PROJECT_NAME} application" ON )
-OPTION( CUBIKS_BUNDLE        "Build ${PROJECT_NAME} release bundle" OFF )
 OPTION( CUBIKS_DOCUMENTATION "Build ${PROJECT_NAME} documentation" OFF )
 OPTION( CUBIKS_TESTS         "Build ${PROJECT_NAME} test suite" OFF )
 
 # Configuration CMake Module Path
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
 SET( CMAKE_POLICY_DEFAULT_CMP0077 NEW )
+
+IF( APPLE OR UNIX OR MINGW )
+	SET_PROPERTY( GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1 )
+ENDIF()
 
 # Choose default build type (if none specified)
 IF( NOT CMAKE_BUILD_TYPE )
@@ -85,7 +88,7 @@ IF( CUBIKS_APP )
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC glbinding::glbinding )
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC glbinding::glbinding-aux )
 	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} PUBLIC globjects::globjects )
-	
+
 	FILE( COPY "${CMAKE_CURRENT_SOURCE_DIR}/assets" DESTINATION "${CMAKE_BINARY_DIR}" )
 	FILE( COPY "${CMAKE_CURRENT_SOURCE_DIR}/shaders" DESTINATION "${CMAKE_BINARY_DIR}" )
 
@@ -96,18 +99,6 @@ IF( CUBIKS_APP )
 		COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARIES} "${CMAKE_BINARY_DIR}"
 		COMMENT "Moving libraries to binary directory"
 	)
-
-	IF( CUBIKS_BUNDLE )
-		ADD_CUSTOM_COMMAND(
-			TARGET ${PROJECT_NAME} POST_BUILD
-			COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/"
-			COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARIES} "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/"
-			COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${PROJECT_NAME}> "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/"
-			COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/assets/" "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/assets/"
-			COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/shaders/" "${CMAKE_BINARY_DIR}/Cubiks_${CMAKE_SYSTEM}_$<CONFIG>/shaders/"
-			COMMENT "Creating ${PROJECT_NAME} bundle"
-		)
-	ENDIF()
 ENDIF()
 
 IF( CUBIKS_TESTS )
