--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -51,34 +51,68 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         run: cmake -E tar cfv Cubiks_MacOS_${{matrix.configs}}.zip --format=zip Cubiks_MacOS_${{matrix.configs}}
 
-      - name: Upload artifacts
+      - name: Upload artifact
         uses: actions/upload-artifact@v1
         with:
           path: ../build/Cubiks_MacOS_${{matrix.configs}}.zip
           name: Cubiks_MacOS_${{matrix.configs}}.zip
 
   release:
-    name: Build
+    name: Release
     if: contains(github.ref, 'tags/v')
     runs-on: ubuntu-latest
     needs: build
-
     steps:
-      - name: Create Release
+      - name: Create release
         id: create_release
         uses: actions/create-release@v1.0.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
 
-      - name: Store Release url
+      - name: Store release url
         run: |
           echo "${{ steps.create_release.outputs.upload_url }}" > ./upload_url
+
       - uses: actions/upload-artifact@v1
         with:
           path: ./upload_url
           name: upload_url
+
+  publish:
+    name: Publish
+    if: contains(github.ref, 'tags/v')
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: Cubiks_MacOS_Release.zip
+          path: ./
+
+      - name: Download url
+        uses: actions/download-artifact@v1
+        with:
+          name: upload_url
+          path: ./
+
+      - id: set_upload_url
+        run: |
+          upload_url=`cat ./upload_url`
+          echo ::set-output name=upload_url::$upload_url
+
+      - name: Upload to Release
+        id: upload_to_release
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          upload_url: ${{ steps.set_upload_url.outputs.upload_url }}
+          asset_path: ./Cubiks_MacOS_Release.zip
+          asset_name: Cubiks_MacOS_Release.zip
+          asset_content_type: application/zip
