--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -46,7 +46,7 @@ jobs:
           cmake --build . --config "${{matrix.configs}}" --parallel 4
           mkdir Cubiks_Windows_${{matrix.configs}}
           cp ${{matrix.configs}}/Cubiks.exe Cubiks_Windows_${{matrix.configs}}/.
-          cp submodules/*.dll Cubiks_Windows_${{matrix.configs}}/.
+          cp ${{matrix.configs}}/submodules/*.dll Cubiks_Windows_${{matrix.configs}}/.
           cp -R ../Cubiks/assets Cubiks_Windows_${{matrix.configs}}/.
           cp -R ../Cubiks/shaders Cubiks_Windows_${{matrix.configs}}/.
 
