--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           cmake -Bbuild -H$GITHUB_WORKSPACE \
                 -DCMAKE_BUILD_TYPE=${{matrix.configs}} \
-                -DCUBIKS_TESTS=OFF
+                -DCUBIKS_TESTS=OFF \
                 -DCUBIKS_APP=OFF
         # -DCUBIKS_TESTS=ON
 
